Update format of landing page

--- a/APOD.html
+++ b/APOD.html
@@ -1,11 +1,16 @@
 <!doctype html>
+
 <html>
-    <head>
-        <title>Astronomy Picture of the Day</title>
-        <meta name="description" content="Chrome extension to display NASA's APOD">
-        <meta name="keywords" content="NASA APOD extension">
-    </head>
-    <body>
+<head>
+    <title>Astronomy Picture of the Day</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Chrome extension to display NASA's APOD">
+    <meta name="keywords" content="NASA APOD extension">
+</head>
+
+<body>
+    <div>
         Hello, world! :)
-    </body>
+    </div>
+</body>
 </html>
